--- a/stereochip/app/styles/main.css
+++ b/stereochip/app/styles/main.css
@@ -41,6 +41,25 @@ button.goButton:hover {
     max-height: 300px;
     padding: 40px;
     box-sizing: border-box; }
+    .howItWorks section .image {
+      width: 315px;
+      height: 150px;
+      background-size: 535px;
+      background-color: transparent; }
+      .howItWorks section .image.howItWorks1 {
+        background-image: url(../assets/1.png);
+        background-position: -125px -47px; }
+      .howItWorks section .image.howItWorks2 {
+        background-image: url(../assets/2.png);
+        background-position: -136px -60px; }
+      .howItWorks section .image.howItWorks3 {
+        background-image: url(../assets/3.png);
+        background-size: 508px;
+        background-position: -114px -58px; }
+      .howItWorks section .image.howItWorks4 {
+        background-image: url(../assets/4.png);
+        background-position: -115px -58px;
+        background-size: 510px; }
   .howItWorks .bar button {
     margin: 0 auto;
     display: block;
