--- a/stereochip/app/styles/main.scss
+++ b/stereochip/app/styles/main.scss
@@ -42,7 +42,31 @@ button.goButton:hover {
         min-height: 300px;
         max-height: 300px;
         padding: 40px;
-        box-sizing: border-box;        
+        box-sizing: border-box;
+        .image {
+            width: 315px;
+            height: 150px;
+            background-size: 535px;
+            background-color: transparent;
+            &.howItWorks1 {
+                background-image: url(../assets/1.png);
+                background-position: -125px -47px;
+            }
+            &.howItWorks2 {
+                background-image: url(../assets/2.png);
+                background-position: -136px -60px;
+            }            
+            &.howItWorks3 {
+                background-image: url(../assets/3.png);
+                background-size: 508px;
+                background-position: -114px -58px;
+            }
+            &.howItWorks4 {
+                background-image: url(../assets/4.png);
+                background-position: -115px -58px;
+                background-size: 510px;
+            }                              
+        }        
     }
     .bar {
         button {
