--- a/stereochip/app/styles/main.css
+++ b/stereochip/app/styles/main.css
@@ -40,7 +40,9 @@ button.goButton:hover {
     min-height: 300px;
     max-height: 300px;
     padding: 40px;
-    box-sizing: border-box; }
+    box-sizing: border-box;
+    border-bottom: 2px solid #dadada;
+    position: relative; }
     .howItWorks section .image {
       width: 315px;
       height: 150px;
@@ -60,10 +62,16 @@ button.goButton:hover {
         background-image: url(../assets/4.png);
         background-position: -115px -58px;
         background-size: 510px; }
+    .howItWorks section.right h2, .howItWorks section.right div {
+      float: right; }
+    .howItWorks section.right div {
+      position: absolute;
+      right: 50px;
+      top: 100px; }
   .howItWorks .bar button {
     margin: 0 auto;
     display: block;
-    background-color: #dadada;
+    background-color: white;
     border-radius: 0px; }
 
 .shadeSection {
