--- a/stereochip/app/styles/main.scss
+++ b/stereochip/app/styles/main.scss
@@ -43,6 +43,8 @@ button.goButton:hover {
         max-height: 300px;
         padding: 40px;
         box-sizing: border-box;
+        border-bottom: 2px solid #dadada;
+        position: relative;
         .image {
             width: 315px;
             height: 150px;
@@ -66,13 +68,23 @@ button.goButton:hover {
                 background-position: -115px -58px;
                 background-size: 510px;
             }                              
+        }
+        &.right {
+            h2,div {
+                float: right;
+            }
+            div {
+                position: absolute;
+                right: 50px;
+                top: 100px;                
+            }
         }        
     }
     .bar {
         button {
             margin: 0 auto;
             display: block;
-            background-color: #dadada;
+            background-color: white;
             border-radius:0px;            
         }
     }
